# callibella

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  audioPlayer.ts  bokaTypes.ts  languages.ts  mockAudio.ts  mockTranslation.ts  registers.ts  styles.css  tauriAudio.ts  tauriStorage.ts  tauriTranslation.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/boka/: anthropic.rs  audio.rs  audio_types.rs  gui_types.rs  mod.rs  openai_compat.rs  prompts.rs  translation.rs  types.rs
src/components/: CategoryPicker.tsx  LanguagePicker.tsx  RegisterChip.tsx  RightDrawer.tsx  StoryPicker.tsx
src/components/update/: UpdateContext.tsx  UpdatePanel.tsx  types.ts
src/views/: CompilerView.tsx  LibraryView.tsx  NewView.tsx  PracticeView.tsx  ReviewView.tsx  SettingsView.tsx
