[package]
name = "boka-gui"
version = "0.1.0"
edition = "2021"
description = "Boka (Desktop)"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
# TTS: Kokoro-82M via kokorox (uses ort 2.0.0-rc.11)
kokorox = { git = "https://github.com/WismutHansen/kokorox", default-features = true }
base64 = "0.22"
hound = "3.5"
sha2 = "0.10"
